[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "thirofoo", email = "83126064+thirofoo@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
evaluate = "evaluation:main"
verify_taskset = "verification.verify_taskset:verify_taskset"
verify_monte_carlo = "verification.verify_monte_carlo:verify_monte_carlo"
verify_convolution = "verification.verify_convolution:verify_convolution"
verify_berry_essen = "verification.verify_berry_essen:verify_berry_essen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]
