[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "thirofoo", email = "83126064+thirofoo@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pymupdf>=1.25.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
evaluate_monte_carlo = "evaluation:evaluate_monte_carlo"
evaluate_monte_carlo_adjust_sample = "evaluation:evaluate_monte_carlo_adjust_sample"
evaluate_berry_essen = "evaluation:evaluate_berry_essen"
evaluate_convolution = "evaluation:evaluate_convolution"
evaluate_convolution_doubling = "evaluation:evaluate_convolution_doubling"
evaluate_convolution_merge = "evaluation:evaluate_convolution_merge"
evaluate_all = "evaluation:evaluate_all_methods"
evaluate_one_taskset_all = "evaluation:plot_normalized_response_times"

plot_wcdfp_comparison = "evaluation:plot_wcdfp_comparison"
plot_time_ratio_vs_wcdfp_ratio = "evaluation:plot_time_ratio_vs_wcdfp_ratio"
plot_execution_time = "evaluation:plot_execution_time_boxplot"
plot_comparison_for_task_id = "evaluation:plot_comparison_for_task_id"

verify_taskset = "verification.verify_taskset:verify_taskset"
verify_monte_carlo = "verification.verify_monte_carlo:verify_monte_carlo"
verify_convolution = "verification.verify_circular_convolution:verify_convolution"
verify_berry_essen = "verification.verify_berry_essen:verify_berry_essen"

merge_pdf = "evaluation:merge_two_pdfs_side_by_side"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]
